[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = ""
authors = ["Andre <andresionek91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
boto3 = "^1.17.108"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
